# jj-extensions

./: .gitignore  README.md  pyproject.toml
src/jj_extensions/: cli.py  shell.py  sync.py
