[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jj-extensions"
version = "0.1.0"
description = "Extensions and commands for jujutsu (jj) to manage stacked PRs"
authors = [{name = "George Tong"}]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/your/repo"

[project.scripts]
jj-stack = "jj_extensions.cli:main"
